--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,16 @@
             <artifactId>modelmapper</artifactId>
             <version>2.4.4</version> <!-- Use the latest version available -->
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
